<resources>
    <string name="app_name">EFIDroid Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="ostype_android">Android</string>
    <string name="ostype_ubuntu">Ubuntu</string>

    <string name="scheme_android_loopsystem_bindother">LoopSystem + BindOther</string>
    <string name="scheme_android_bindall">BindAll</string>
    <string name="scheme_android_loopall">LoopAll</string>
    <string name="title_activity_about">About</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="contentdescription_operatingsystemicon">Icon</string>
    <string name="scheme">Scheme</string>
    <string name="url_efidroid_website">https://efidroid.org</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="recovery_tools">Recovery Tools</string>
    <string name="uefi_apps">UEFI Apps</string>
    <string name="plugins">Plugins</string>
    <string name="themes">Themes</string>
    <string name="install_update">Install/Update</string>
    <string name="share">Share</string>
    <string name="get_help">Get help</string>
    <string name="report_bug">Report bug</string>
    <string name="about_efidroid">About EFIDroid</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_refresh">Refresh</string>

    <string name="app_version">App Version %1$s</string>
    <string name="compiled_by">Compiled by %1$s@%2$s on %3$s</string>

    <string name="reloading_info">Reloading info</string>
    <string name="reloading">Reloading</string>
    <string name="cant_reload_install_status">Can\'t reload installation status</string>
    <string name="error">Error</string>

    <string name="efidroid_version">EFIDroid version</string>
    <string name="build_time">Build time</string>
    <string name="efi_spec">EFI Specification</string>
    <string name="uninstall">Uninstall</string>
    <string name="install">Install</string>
    <string name="reinstall">Reinstall</string>
    <string name="repair">Repair</string>
    <string name="update">Update</string>
    <string name="and">and</string>
    <string name="status_esp_only">has an ESP backup only</string>
    <string name="status_esp_missing">has no ESP backup</string>
    <string name="status_wrong_device">is for another device</string>
    <string name="status_not_installed">is not installed</string>

    <string name="installed_and_updated">Installed and updated</string>
    <string name="save">Save</string>
    <string name="edit_partition">Edit partition</string>
    <string name="creating_system">Creating system %1$s</string>
    <string name="updating_system">Updating system %1$s</string>
    <string name="deleting_system">Deleting system %1$s</string>
    <string name="create_operating_system">Create Operating System</string>
    <string name="loading_device_info">Loading device info</string>
    <string name="please_wait">Please wait</string>
    <string name="cancelled_loading_system_info">Cancelled loading system information.</string>
    <string name="cant_load_system_info">"Can\'t load system information: "</string>
    <string name="tab_title_general">GENERAL</string>
    <string name="tab_title_partitions">PARTITIONS</string>
    <string name="tab_title_replacements">REPLACEMENTS</string>
    <string name="tab_title_plugins">PLUGINS</string>
    <string name="cant_load_operating_systems">"Can\'t load operating systems. "</string>
    <string name="cant_load_install_info">"Can\'t load installation info. "</string>
    <string name="cant_load_device_info_check_connection">Can\'t load device info. Please check your connection.\n\n</string>
    <string name="try_again">Try again</string>
    <string name="you_need_root">You need Root access to use this app.</string>
    <string name="share_text">I\'m running EFIDroid on my %1$s!\nMore info: http://efidroid.org</string>
    <string name="os_delete_confirmation">Do you want to delete \'%1$s\'?</string>
    <string name="name_must_not_be_empty">Name must not be empty</string>
    <string name="new_cmdline_override">New cmdline override</string>
    <string name="edit_cmdline_override">Edit cmdline override</string>
    <string name="invalid_characters">Invalid characters</string>
    <string name="binaries">Binaries</string>
    <string name="kernel">kernel</string>
    <string name="ramdisk">ramdisk</string>
    <string name="dt">dt</string>
    <string name="commandline">Commandline</string>
    <string name="_disabled_">(disabled)</string>
    <string name="stop">Stop</string>
    <string name="aborted">Aborted</string>
    <string name="downloading">Downloading</string>
    <string name="cant_extract_update">Can\'t extract update</string>
    <string name="cant_find_esp_partition">Can\'t find ESP partition</string>
    <string name="cant_create_uefiesp_dir">can\'t create UEFIESP directory</string>
    <string name="invalid_update">Invalid update</string>
    <string name="search_for_update">search for update</string>
    <string name="no_update_available">No update available</string>
    <string name="downloading_update">downloading update</string>
    <string name="installing">installing</string>
    <string name="installing_efidroid">Installing EFIDroid</string>
    <string name="installing_efidroid_successful">Installing EFIDroid successful</string>
    <string name="error_installling_efidroid">Error installing EFIDroid</string>
    <string name="uninstalling">uninstalling</string>
    <string name="uninstalling_efidroid">Uninstalling EFIDroid</string>
    <string name="uninstalling_efidroid_successful">Uninstalling EFIDroid successful</string>
    <string name="error_uninstalliing_efidroid">Error uninstalling EFIDroid</string>
    <string name="os_does_not_exist">Operating System does not exist</string>
    <string name="removing_system">Removing system %1$s</string>
    <string name="removed_system">Removed system %1$s</string>
    <string name="error_removing_system">Error removing system %1$s</string>
    <string name="cant_delete_os">Can\'t delete Operating system</string>
    <string name="creating_os_dir">Creating OS directory</string>
    <string name="cant_create_multiboot_dir">Can\'t create multiboot directory</string>
    <string name="rom_dir_does_already_exist">ROM directory does already exist</string>
    <string name="cant_create_rom_dir">Can\'t create ROM directory</string>
    <string name="cant_write_icon">Can\'t create ROM directory</string>
    <string name="cant_delete_old_icon">Can\'t delete old icon</string>
    <string name="setup_partition">setup partition \'%1$s\'</string>
    <string name="cant_create_dir">Can\'t create directory \'%1$s\'</string>
    <string name="cant_create_loop_img">Can\'t create loop image \'%1$s\': </string>
    <string name="created_system">created system %s</string>
    <string name="updated_system">updated system %s</string>
    <string name="error_creating_system">Error creating system %1$s</string>
    <string name="error_updating_system">Error updating system %1$s</string>
    <string name="device_is_encrypted">Encrypted devices are not supported</string>
    <string name="use_custom_ota_server">Use custom OTA server</string>
    <string name="ota_server_url">Address of OTA server</string>
    <string name="ota_settings">OTA Settings</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="invalid_url_message">Server URL must have \"http\" or \"https\" scheme and contain non-empty hostname</string>
</resources>
