<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_main">
        <item
            android:id="@+id/nav_operating_systems"
            android:icon="@drawable/ic_menu_memory"
            android:title="@string/operating_systems"/>
        <item
            android:id="@+id/nav_recovery_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/recovery_tools"
            android:visible="false" />
        <item
            android:id="@+id/nav_uefi_apps"
            android:icon="@drawable/ic_menu_archive"
            android:title="@string/uefi_apps"
            android:visible="false" />
        <item
            android:id="@+id/nav_plugins"
            android:icon="@drawable/ic_menu_extension"
            android:title="@string/plugins"
            android:visible="false" />
        <item
            android:id="@+id/nav_themes"
            android:icon="@drawable/ic_menu_color_lens"
            android:title="@string/themes"
            android:visible="false" />
    </group>

    <group android:id="@+id/nav_group_setup">
        <item
            android:id="@+id/nav_install"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/install_update" />
        <item
            android:id="@+id/nav_override_ota"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/override_ota_server" />
    </group>

    <group android:id="@+id/nav_group_communicate">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_get_help"
            android:icon="@drawable/ic_menu_hospital"
            android:title="@string/get_help" />
        <item
            android:id="@+id/nav_bug_report"
            android:icon="@drawable/ic_menu_bug_report"
            android:title="@string/report_bug" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info_outline"
            android:title="@string/about_efidroid" />
    </group>


</menu>
